@@ -5,6 +5,11 @@ CHANGELOG
 IMPORTANT: "TAILS Candy" is for use with a TAILS persistent volume only, i.e.
 *********  when running TAILS from a USB-stick, SSD card or virtual machine with persistence support.		
 
+November 16th 2015
+******************
+
+- Added Horcrux backup/restore script
+
 November 11th 2015
 ******************
 
